bpo-38376: Fix _PyUnicode_CheckConsistency() definition

Always define _PyUnicode_CheckConsistency() in the CPython C API.